tests/negative/gold/factory-only-test.gold
tests/negative/factory-only-test.toit:7:7: error: A class with factories must have a constructor
class A:
      ^
Compilation failed
